# internal/dto/jwt.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetJWTOutput struct {
+	AccesToken string `json:"acess_token"`
+}
